--- a/wine_scraper.ipynb
+++ b/wine_scraper.ipynb
@@ -190,6 +190,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wine haram brother\n",
+      " bro\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"wine haram brother\\n bro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
@@ -289,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
