Commit guillaume branche

--- a/wine_scraper.ipynb
+++ b/wine_scraper.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "print(\"wine haram brother\\n bro\")"
+    "print(\"wine haram brother\\n bro naze\")"
    ]
   },
   {
