--- a/WS_extract_page.ipynb
+++ b/WS_extract_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,12 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _scraping(adresse):\n",
-    "    soupe = _scrap_soupe(adresse=adresse)\n",
+    "    soupe = _scrap_soupe(adresse)\n",
     "    \n",
     "    results = Vin(\n",
     "        _scrap_name(soupe),\n",
@@ -201,12 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def json_brut(adresse):\n",
-    "    vins = _scraping(adresse=adresse)\n",
+    "    vins = _scraping(adresse)\n",
     "    vins_json = to_json(vins)\n",
     "    \n",
     "    file_path = \"data/vins.json\"\n",
@@ -217,11 +217,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_brut(ADDRESSE2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import src.modules.scraping as sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\guill\\OneDrive - Université de Tours\\Bureau\\M2\\ML\\Wine-Scraping\\src\\modules\\scraping.py:9: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "\n",
+      "The code that caused this warning is on line 9 of the file c:\\Users\\guill\\OneDrive - Université de Tours\\Bureau\\M2\\ML\\Wine-Scraping\\src\\modules\\scraping.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "\n",
+      "  soupe = BS(requete.text)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Vin(name='MONSIEUR N ROUGE - GRENACHE, SYRAH - MAISON FRANÇOIS-XAVIER NICOLAS', capacity=' 0,75 L ', prices=('  7,00 €    ', ' 6,30 € ', None), characteristic='Vin Rouge / Vin de France / 13,5 % vol', note='', keyword=['Gourmandise', 'Grenache', 'Syrah'], informations=(' non millésimé', ' Grenache, Syrah', ' Rouge Charnu et fruité', ' Fruité', ' Robe pourpre aux reflets vifs', \" Nez intense de fruits rouges (framboises) et des notes d'épices douces\", ' Le grenache apporte une bouche très riche et équilibrée, toute en rondeur et offre des arômes de coulis de petits fruits frais. la Syrah, elle, apporte le côté fruits sauvages et floral (cassis et violette)', ' 17-18°C', ' En bouteille', ' A boire et à garder', ' 2028', ' Apéritif, Charcuterie, Viande rouge, Viande blanche, Volaille, Barbecue, Cuisine du monde'), picture='https://www.vinatis.com/78203-detail_default/monsieur-n-rouge-grenache-syrah-maison-francois-xavier-nicolas.png')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc.scraping(\"https://www.vinatis.com/60060-monsieur-n-rouge-grenache-syrah-maison-francois-xavier-nicolas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _scrap_informations(soupe:BS) -> str:\n",
+    "    class_n = \"table-cell-css vertical-align-top padding-vertical-5 nowrap padding-right-10 taille-xs color-gray-darker\"\n",
+    "    class_value = \"table-cell-css vertical-align-top padding-vertical-5 taille-xs color-gray-darker text-bold\"\n",
+    "    \n",
+    "    details = [' \\xa0\\xa0Millésime',' \\xa0\\xa0Cépage',' \\xa0\\xa0Goûts',\n",
+    "           ' \\xa0\\xa0Par Goûts', \" \\xa0\\xa0A l'oeil\", ' \\xa0\\xa0Au nez',\n",
+    "           ' \\xa0\\xa0En bouche',' \\xa0\\xa0Température de service',' \\xa0\\xa0Service', \n",
+    "           ' \\xa0\\xa0Conservation', \" \\xa0\\xa0Jusqu'à\", ' \\xa0\\xa0Accords mets-vin',\n",
+    "           ' \\xa0\\xa0Accords recommandés']\n",
+    "   \n",
+    "    dictionnaire_vin = {\n",
+    "        ' \\xa0\\xa0Millésime': [],\n",
+    "        ' \\xa0\\xa0Cépage': [],\n",
+    "        ' \\xa0\\xa0Goûts': [],\n",
+    "        ' \\xa0\\xa0Par Goûts': [],\n",
+    "        \" \\xa0\\xa0A l'oeil\": [],\n",
+    "        ' \\xa0\\xa0Au nez': [],\n",
+    "        ' \\xa0\\xa0En bouche': [],\n",
+    "        ' \\xa0\\xa0Température de service': [],\n",
+    "        ' \\xa0\\xa0Service': [],\n",
+    "        ' \\xa0\\xa0Conservation': [],\n",
+    "        \" \\xa0\\xa0Jusqu'à\": [],\n",
+    "        ' \\xa0\\xa0Accords mets-vin': [],\n",
+    "        ' \\xa0\\xa0Accords recommandés': []\n",
+    "    }\n",
+    "   \n",
+    "    place_element = soupe.find_all(name=\"div\", attrs={\"class\": class_n})\n",
+    "    value_element = soupe.find_all(name=\"div\", attrs={\"class\": class_value})\n",
+    "    details_page = [place_element[i].text for i in range(len(place_element))]\n",
+    "    value_page = [value_element[i].text for i in range(len(value_element))]\n",
+    "    \n",
+    "    j = 0\n",
+    "    for i, detail in zip(range(13),details):\n",
+    "        try:\n",
+    "            details_page.index(details[i])\n",
+    "            dictionnaire_vin[detail] = value_page[j]\n",
+    "            j = j+1\n",
+    "        except:\n",
+    "            dictionnaire_vin[detail] = None\n",
+    "        \n",
+    "    \n",
+    "    return dictionnaire_vin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' \\xa0\\xa0Millésime': ' 2020',\n",
+       " ' \\xa0\\xa0Cépage': None,\n",
+       " ' \\xa0\\xa0Goûts': ' Rouge Puissant et généreux',\n",
+       " ' \\xa0\\xa0Par Goûts': ' Puissant',\n",
+       " \" \\xa0\\xa0A l'oeil\": ' Belle robe grenat.',\n",
+       " ' \\xa0\\xa0Au nez': ' Complexe et très gourmand sur les fruits mûrs et compotés complété par des nuances épicées.',\n",
+       " ' \\xa0\\xa0En bouche': ' Une bouche intense et structurée, aux saveurs de fruits (fruits rouges, pruneaux, figue), et jolies notes épicées en finale.',\n",
+       " ' \\xa0\\xa0Température de service': ' 16-18°C',\n",
+       " ' \\xa0\\xa0Service': ' Ouvrir 1h avant le service',\n",
+       " ' \\xa0\\xa0Conservation': ' A boire et à garder',\n",
+       " \" \\xa0\\xa0Jusqu'à\": ' 2032',\n",
+       " ' \\xa0\\xa0Accords mets-vin': ' Charcuterie, Viande rouge, Viande blanche, Barbecue, Cuisine du monde, Fromage',\n",
+       " ' \\xa0\\xa0Accords recommandés': ' Grillades, entrecôte, sauté de canard, poivrons farcis, risotto au chorizo'}"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soupe = _scrap_soupe(\"https://www.vinatis.com/52605-vacqueyras-vieilles-vignes-2020-domaine-sandilaure\")\n",
+    "_scrap_informations(soupe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_n = \"table-cell-css vertical-align-top padding-vertical-5 nowrap padding-right-10 taille-xs color-gray-darker\"\n",
+    "class_value = \"table-cell-css vertical-align-top padding-vertical-5 taille-xs color-gray-darker text-bold\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "details = [' \\xa0\\xa0Millésime',' \\xa0\\xa0Cépage',' \\xa0\\xa0Goûts',\n",
+    "           ' \\xa0\\xa0Par Goûts', \" \\xa0\\xa0A l'oeil\", ' \\xa0\\xa0Au nez',\n",
+    "           ' \\xa0\\xa0En bouche',' \\xa0\\xa0Température de service',' \\xa0\\xa0Service', \n",
+    "           ' \\xa0\\xa0Conservation', \" \\xa0\\xa0Jusqu'à\", ' \\xa0\\xa0Accords mets-vin',\n",
+    "           ' \\xa0\\xa0Accords recommandés']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place_element = soupe.find_all(name=\"div\", attrs={\"class\": class_n})\n",
+    "value_element = soupe.find_all(name=\"div\", attrs={\"class\": class_value})\n",
+    "details_page = [place_element[i].text for i in range(len(place_element))]\n",
+    "value_page = [value_element[i].text for i in range(len(value_element))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionnaire_vin = {\n",
+    "    ' \\xa0\\xa0Millésime': [],\n",
+    "    ' \\xa0\\xa0Cépage': [],\n",
+    "    ' \\xa0\\xa0Goûts': [],\n",
+    "    ' \\xa0\\xa0Par Goûts': [],\n",
+    "    \" \\xa0\\xa0A l'oeil\": [],\n",
+    "    ' \\xa0\\xa0Au nez': [],\n",
+    "    ' \\xa0\\xa0En bouche': [],\n",
+    "    ' \\xa0\\xa0Température de service': [],\n",
+    "    ' \\xa0\\xa0Service': [],\n",
+    "    ' \\xa0\\xa0Conservation': [],\n",
+    "    \" \\xa0\\xa0Jusqu'à\": [],\n",
+    "    ' \\xa0\\xa0Accords mets-vin': [],\n",
+    "    ' \\xa0\\xa0Accords recommandés': []\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = 0\n",
+    "for i, detail in zip(range(13),details):\n",
+    "    try:\n",
+    "        details_page.index(details[i])\n",
+    "        dictionnaire_vin[detail] = value_page[j]\n",
+    "        j = j+1\n",
+    "    except:\n",
+    "        dictionnaire_vin[detail] = None\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' \\xa0\\xa0Millésime': ' 2020',\n",
+       " ' \\xa0\\xa0Cépage': None,\n",
+       " ' \\xa0\\xa0Goûts': ' Rouge Puissant et généreux',\n",
+       " ' \\xa0\\xa0Par Goûts': ' Puissant',\n",
+       " \" \\xa0\\xa0A l'oeil\": ' Belle robe grenat.',\n",
+       " ' \\xa0\\xa0Au nez': ' Complexe et très gourmand sur les fruits mûrs et compotés complété par des nuances épicées.',\n",
+       " ' \\xa0\\xa0En bouche': ' Une bouche intense et structurée, aux saveurs de fruits (fruits rouges, pruneaux, figue), et jolies notes épicées en finale.',\n",
+       " ' \\xa0\\xa0Température de service': ' 16-18°C',\n",
+       " ' \\xa0\\xa0Service': ' Ouvrir 1h avant le service',\n",
+       " ' \\xa0\\xa0Conservation': ' A boire et à garder',\n",
+       " \" \\xa0\\xa0Jusqu'à\": ' 2032',\n",
+       " ' \\xa0\\xa0Accords mets-vin': ' Charcuterie, Viande rouge, Viande blanche, Barbecue, Cuisine du monde, Fromage',\n",
+       " ' \\xa0\\xa0Accords recommandés': ' Grillades, entrecôte, sauté de canard, poivrons farcis, risotto au chorizo'}"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictionnaire_vin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import src.modules.scraping as sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\guill\\OneDrive - Université de Tours\\Bureau\\M2\\ML\\Wine-Scraping\\src\\modules\\scraping.py:9: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "\n",
+      "The code that caused this warning is on line 9 of the file c:\\Users\\guill\\OneDrive - Université de Tours\\Bureau\\M2\\ML\\Wine-Scraping\\src\\modules\\scraping.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "\n",
+      "  soupe = BS(requete.text)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Vin(name='VACQUEYRAS VIEILLES VIGNES 2020 - DOMAINE SANDILAURE', capacity=' 0,75 L ', prices=('  15,50 €    ', ' 11,90 € ', None), characteristic='Vin Rouge / Rhône / Vacqueyras AOC / 14 % vol', note=' 16.9/20  noté par 13 clients ', keyword=['Epicé', 'Charpenté', 'Maison incontournable'], informations={' \\xa0\\xa0Millésime': ' 2020', ' \\xa0\\xa0Cépage': None, ' \\xa0\\xa0Goûts': ' Rouge Puissant et généreux', ' \\xa0\\xa0Par Goûts': ' Puissant', \" \\xa0\\xa0A l'oeil\": ' Belle robe grenat.', ' \\xa0\\xa0Au nez': ' Complexe et très gourmand sur les fruits mûrs et compotés complété par des nuances épicées.', ' \\xa0\\xa0En bouche': ' Une bouche intense et structurée, aux saveurs de fruits (fruits rouges, pruneaux, figue), et jolies notes épicées en finale.', ' \\xa0\\xa0Température de service': ' 16-18°C', ' \\xa0\\xa0Service': ' Ouvrir 1h avant le service', ' \\xa0\\xa0Conservation': ' A boire et à garder', \" \\xa0\\xa0Jusqu'à\": ' 2032', ' \\xa0\\xa0Accords mets-vin': ' Charcuterie, Viande rouge, Viande blanche, Barbecue, Cuisine du monde, Fromage', ' \\xa0\\xa0Accords recommandés': ' Grillades, entrecôte, sauté de canard, poivrons farcis, risotto au chorizo'}, picture='https://www.vinatis.com/65936-detail_default/vacqueyras-vieilles-vignes-2020-domaine-sandilaure.png')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc.scraping(\"https://www.vinatis.com/52605-vacqueyras-vieilles-vignes-2020-domaine-sandilaure\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\guill\\OneDrive - Université de Tours\\Bureau\\M2\\ML\\Wine-Scraping\\src\\modules\\scraping.py:9: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "\n",
+      "The code that caused this warning is on line 9 of the file c:\\Users\\guill\\OneDrive - Université de Tours\\Bureau\\M2\\ML\\Wine-Scraping\\src\\modules\\scraping.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "\n",
+      "  soupe = BS(requete.text)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc.json_brut(sc.scraping(\"https://www.vinatis.com/52605-vacqueyras-vieilles-vignes-2020-domaine-sandilaure\"))"
    ]
   }
  ],
