--- a/models.ipynb
+++ b/models.ipynb
@@ -58,18 +58,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\guill\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = model_mlp(X_train, y_train)"
+    "model = train_model(X_train, y_train)"
    ]
   },
   {
@@ -84,13 +75,19 @@
       "+--------+-------+-------+\n",
       "| Modèle | Score |   SD  |\n",
       "+--------+-------+-------+\n",
-      "| model  | 0.419 | 0.056 |\n",
+      "|  knn   | 0.207 | 0.027 |\n",
+      "|  svm   | 0.365 | 0.021 |\n",
+      "|  mlp   | 0.421 | 0.049 |\n",
+      "|   rf   | 0.386 | 0.047 |\n",
+      "| boost  | 0.396 | 0.032 |\n",
+      "| ridge  | 0.359 | 0.031 |\n",
       "+--------+-------+-------+\n"
      ]
     }
    ],
    "source": [
-    "model_result(model=model)"
+    "model_result(knn=model[\"model_knn\"],svm=model[\"model_svm\"],mlp=model[\"model_mlp\"],\n",
+    "             rf=model[\"model_rf\"],boost=model[\"model_boost\"],ridge=model[\"model_ridge\"])"
    ]
   },
   {
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,14 +110,14 @@
       "|            Parameter             |  Value   |\n",
       "+----------------------------------+----------+\n",
       "|       imputation__strategy       |  median  |\n",
-      "| entrainement__hidden_layer_sizes | (60, 60) |\n",
+      "| entrainement__hidden_layer_sizes | (50, 50) |\n",
       "|       entrainement__solver       |   adam   |\n",
       "+----------------------------------+----------+\n"
      ]
     }
    ],
    "source": [
-    "model_param(model, \n",
+    "model_param(model[\"model_mlp\"], \n",
     "            \"imputation__strategy\",\n",
     "            \"entrainement__hidden_layer_sizes\",\n",
     "            \"entrainement__solver\")"
