Création du pyproject.toml et amélioration des types de retour `DeltaGenerator` pour l'application.

--- a/notebooks/new_notebook.ipynb
+++ b/notebooks/new_notebook.ipynb
@@ -360,6 +360,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = Path(\".\").resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chemin_csv = root.parent / \"data\" / \"result_ml_regression.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pl.read_csv(chemin_csv)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
